--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1769
 include_dir  = Marlin
 
 #
@@ -83,11 +83,12 @@ HAS_LED_FEATURE         = src_filter=+<src/feature/leds>
 # Default values apply to all 'env:' prefixed environments
 #
 [env]
-framework     = arduino
+framework   = arduino
 extra_scripts = ${common.extra_scripts}
-build_flags   = ${common.build_flags}
-lib_deps      = ${common.lib_deps}
-monitor_speed = 250000
+build_flags = ${common.build_flags}
+lib_deps    = ${common.lib_deps}
+upload_port = /run/media/kevin/A87B-A154
+upload_protocol = mbed
 
 #################################
 #                               #
