--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = LPC1769
 include_dir  = Marlin
 
 #
@@ -404,6 +404,7 @@ monitor_flags =
     colorize
   --filter
     time
+upload_port = /run/media/kevin/A87B-A154
 
 #################################
 #                               #
